tests/NormalTests/paczka1/fuzzy1/67440217.err
Error in line 1: S996 A65 38,7
Error in line 3: b136hNwip8 A65 26,2
Error in line 20: PaG A761 8,82
Error in line 17: 5Eq A925 13,1
Error in line 34: 2wSh A925 43,12
Error in line 33: b136hNwip8 A761 95,0
Error in line 32: S996 S996 51,4
